...

    <!-- Error Messages -->
    <string name="em_unable_to_get_action_bar">Unable to get toolbar</string>
    <string name="em_no_internet_connection">No internet connection</string>
    <string name="em_invalid_username_or_password">Invalid username or password</string>
    <string name="em_invalid_username_or_email">Invalid username or email</string>
    <string name="em_please_enter_your_username_or_email">Please enter your username or email</string>
    <string name="em_please_enter_a_username">Please enter a username</string>
    <string name="em_username_has_been_taken">Username has already been taken</string>
    <string name="em_please_enter_a_email">Please enter a email</string>
    <string name="em_email_has_been_used_before">Email has been used before</string>
    <string name="em_please_enter_a_valid_email">Please enter a valid email</string>
    <string name="em_please_enter_a_password">Please enter a password</string>
    <string name="em_invalid_password">Invalid password</string>

    <!-- Hints -->
    <string name="h_username_or_email">Username or email</string>
    <string name="h_password">Password</string>
    <string name="h_username">Username</string>
...
