...
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                    </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/mp_10">

                    <EditText
                        android:layout_width="match_parent"
...
